<package>
  <name>hk_cam</name>
  <version>0.3.6</version>
  <description>A ROS Driver for HK Cameras</description>

  <maintainer email="12345678@qq.com"> tangguojun </maintainer>
  <author email="12345678@qq.com">tangguojun</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>sensor_msgs</build_depend> 

  <run_depend>image_transport</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
</package>
